对定制组建，读取配置内容。

--- a/buildsrc/build.gradle
+++ b/buildsrc/build.gradle
@@ -1,4 +1,45 @@
 apply plugin: 'groovy'
+apply plugin: TestExtensionPlugin
+
+
+wq {
+    address{
+        province "BeiJing"
+        city "DongSiShiTiao"
+    }
+    myName "WangQing"
+}
+
+
+class Address{
+    String province=null
+    String city=null
+}
+class WQExtension{
+    String myName = null
+
+}
+
+class TestExtensionPlugin implements Plugin<Project> {
+
+    @Override
+    void apply(Project project) {
+
+        project.extensions.create('wq', WQExtension)
+        project.extensions.create('address', Address)
+
+
+        project.task('readExtension') << {
+            def address=project['address']
+
+            println project['wq'].myName
+            println address.province+" "+address.city
+        }
+    }
+}
+
+
+
 
 dependencies {
     compile gradleApi()
