对 class 文件进行插装。默认加上文本。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'wq.hello'
-apply plugin: wq.gdky005.NewWQPlugin
+//apply plugin: 'wq.hello'
+//apply plugin: wq.gdky005.NewWQPlugin
+apply plugin: wq.gdky005.WQPlugin
 
 android {
     compileSdkVersion 26
