--- a/buildsrc/build.gradle
+++ b/buildsrc/build.gradle
@@ -39,11 +39,11 @@ class TestExtensionPlugin implements Plugin<Project> {
 }
 
 
-
-
 dependencies {
     compile gradleApi()
     compile localGroovy()
+    compile 'org.javassist:javassist:3.20.0-GA'
+    compile 'com.android.tools.build:gradle:2.3.0'
 }
 
 repositories {
