添加 Gradle编译时查找耗时的任务并显示log。

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':gradlescriptdemo', ':buildsrc'
-//':buildsrc2',
+include ':app', ':gradlescriptdemo',':buildsrc'
+//':buildsrc2',,
